<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:contentDescription="BannerImage"
            android:src="@drawable/imgverfuturo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/VerApp_tv_nombre"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="user name"
            android:hint="@string/VerApp_et_nombre"
            android:inputType="text"
            app:backgroundTint="#3F51B5"/>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="user age"
            android:backgroundTint="#3F51B5"
            android:hint="@string/VerApp_et_edad"
            android:inputType="number" />

        <DatePicker
            android:id="@+id/dpDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:backgroundTint="#5C2F2A2A"
                android:enabled="true"
                android:text="@string/VerApp_btn_next"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnUsuariosBBDD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:autoSizeTextType="uniform"
                android:backgroundTint="#5C2F2A2A"
                android:enabled="true"
                android:text="@string/VerApp_btn_usuarios"
                android:textColor="@color/white"
                android:textSize="25sp" />


        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>